<resources>
    <string name="app_name">WhoRepresentsYou</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Please type in zip code</string>
    <string name="empty_textview_text">Nothing to display</string>

    <string name="title_text_share">Share</string>
    <string name="network_unavailable">Network is not available.</string>
    <string name="call_permission_rejected_by_user">Call permission rejected by the user.</string>
    <string name="imageview_gridview_item">Photo images of the member.</string>
    <string name="btn_search_representative">Representative</string>
    <string name="btn_search_senator">Senator</string>
    <string name="insufficient_permission">Insufficient Permission</string>
    <string name="autocomplete_textview_hint">Please type in last name, or state code</string>
    <string name="telephony_unavailable">Telephone Capability Unavailable</string>
    <string name="zipcode_not_known">Zip code is not known.</string>
    <string name="action_show_favorite">ShowFavorites</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="text_username">Username</string>
    <string name="text_password">password</string>
    <string name="fail_in_picking_account">Failed in picking an account</string>

    <string name="more_than_one_rows_deleted">More than one rows are deleted.</string>
    <string name="please_input_a_keyword">Please input a keyword according to search hint.</string>

    <string name="preference_file_key">com.leontheprofessional.test.whorepresentsyou.sharedpreference</string>
    <string name="no_favorite_member">No favorite member</string>
    <string name="favorite_members">Favorite members</string>

    <string-array name="state_code">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
        <item>AS</item>
        <item>GU</item>
        <item>MP</item>
        <item>PR</item>
        <item>VI</item>
        <item>UM</item>
        <item>FM</item>
        <item>MH</item>
        <item>PW</item>
    </string-array>

    <string name="parcelable_identifier">parcelable_identifier</string>
    <string name="bundle_identifier">bundle_identifier</string>
    <string name="intent_identifier1">intent_identifier_1</string>
    <string name="search_keyword_identifier">search_keyword_identifier</string>
    <string name="fragment_argument_identifier">fragment_argument_identifier</string>
    <string name="fragment_argument_identifier2">fragment_argument_identifier2</string>
    <string name="fragment_argument_identifier3">fragment_argument_identifier3</string>
    <string name="fragment_argument_identifier4">fragment_argument_identifier4</string>
    <string name="save_instance_state_main_activity">save_instance_state_main_activity</string>
    <string name="save_instance_state_details_activity">save_instance_state_details_activity</string>

    <string name="google_client_id">207658950216-g4mshkf842dq22usps87kccl4q29h23v.apps.googleusercontent.com</string>

    <string name="request_permission_fine_location">Access Fine Location permission is needed.</string>
    <string name="request_permission_coarse_location">Access Coarse Location permission is needed.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cd_detail_fragment_icon_account">Account Icon</string>
    <string name="cd_detail_fragment_phone_icon">Phone Icon</string>
    <string name="cd_detail_fragment_office_icon">Office Icon</string>
    <string name="cd_detail_fragment_icon_website">Website Icon</string>
    <string name="cd_lv_item_swipe_delete">Icon Delete</string>
    <string name="cd_login_icon">Icon Login</string>
    <string name="cd_widget_icon">Widget Icon</string>
    <string name="widget_deleted_confirmation">The AppWidget has been deleted</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="cancel_favorite">Favorite canceled</string>
    <string name="deletion_confirmation">Deletion succeeded</string>
    <string name="gps_is_setting">GPS is settings</string>
    <string name="gps_setting_confirmation">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="setting">Setting</string>
</resources>
