<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/icon_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_show_favorite"
        android:orderInCategory="100"
        android:title="@string/action_show_favorite"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/action_log_in"
        android:orderInCategory="100"
        android:title="@string/action_log_in"
        app:showAsAction="never"></item>

</menu>
