<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_detail"
    android:minWidth="@dimen/min_width_login_fragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        android:password="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_confirm"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/action_log_in"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/login_signup"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/action_sign_up"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/google_log_in_imagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/google_log_in" />

</LinearLayout>